--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-        <script class="game-board" src="sketch.js"></script>
+        <script class="Home" src="sketch.js"></script>
         <script src="Vilao.js"></script>
         <script src="Passaro.js"></script>
         <script src="p5.collide2d.js"></script>
