--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <main>
-        <script class="Home" src="sketch.js"></script>
+      <div class="jogo">
+        <script src="sketch.js"></script>
         <script src="Vilao.js"></script>
         <script src="Passaro.js"></script>
         <script src="p5.collide2d.js"></script>
         <script src="Imagens.js"></script>
-  </main>
+  </div>
+    </main>
   </body>
 </html>
