--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
 
   </head>
   <body>
+    <img class="fundo" src="Imagens/wall.jpg"/>
+    <header>
+      <h1>Jogo baseado no filme: Rio(2011)</h1>
+    </header>
     <main>
-      <div class="jogo">
-        <script src="sketch.js"></script>
-        <script src="Vilao.js"></script>
-        <script src="Passaro.js"></script>
-        <script src="p5.collide2d.js"></script>
-        <script src="Imagens.js"></script>
-  </div>
+      <script src="sketch.js"></script>
+      <script src="Vilao.js"></script>
+      <script src="Passaro.js"></script>
+      <script src="p5.collide2d.js"></script>
+      <script src="Imagens.js"></script>
     </main>
+    <div>
+      <img class="heroi" src="Imagens/arara.png"/>
+      <img class="vilao" src="Imagens/nigel.png"/>
+    </div>
+    <p class="txt"> Capturada por contrabandistas de animais quando tinha acabado de nascer, a arara Blu nunca aprendeu a voar e vive uma vida domesticada feliz em Minnesota, nos Estados Unidos, com sua dona, Linda. Blu pensa que é a última arara de sua espécie. Mas quando descobrem que Jewel, uma fêmea, vive no Rio de Janeiro, Blu e Linda vão ao seu encontro. Os contrabandistas capturam Blu e Jewel, mas as aves escapam e começam uma aventura arriscada rumo à liberdade.</p>
   </body>
 </html>
