--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
       <img class="vilao" src="Imagens/nigel.png"/>
     </div>
     <p class="txt"> Capturada por contrabandistas de animais quando tinha acabado de nascer, a arara Blu nunca aprendeu a voar e vive uma vida domesticada feliz em Minnesota, nos Estados Unidos, com sua dona, Linda. Blu pensa que é a última arara de sua espécie. Mas quando descobrem que Jewel, uma fêmea, vive no Rio de Janeiro, Blu e Linda vão ao seu encontro. Os contrabandistas capturam Blu e Jewel, mas as aves escapam e começam uma aventura arriscada rumo à liberdade.</p>
-  </body>
+    <p class="txt2">Aviso! Caso houver derrota, sem realizar 5 pontos. Provocará punições adversas e direito a ofensas como Beta e Beta Spirit.</p>
+</body>
 </html>
