--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img class="fundo" src="Imagens/wall.jpg"/>
     <header>
       <h1>Jogo baseado no filme: Rio(2011)</h1>
+      <a href="https://hardze.github.io/comp_jgs/"><img src="Imagens/seta.png" class="voltar"></a>
     </header>
     <main>
       <script src="sketch.js"></script>
